Java10 Collections Enhancement Scenarios Updated